@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-10T16:08:56Z",
-  "count_outdated" : 657,
-  "uniques_outdated" : 40,
-  "count" : 958,
+  "timestamp" : "2022-04-11T00:36:53Z",
+  "count_outdated" : 673,
+  "uniques_outdated" : 41,
+  "count" : 967,
   "uniques" : 56,
   "views" : [
-    {
-      "timestamp": "2022-03-27T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 0, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-03-28T00:00:00Z",
       "count": 54,
