@@ -1,12 +1,7 @@
 {
-  "count": 301,
+  "count": 294,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-03-27T00:00:00Z",
-      "count": 7,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-03-28T00:00:00Z",
       "count": 54,
