@@ -1,3 +1,9 @@
+2022-04-11T00:36:53Z:
+* notice: last 14d: all unq: 294 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 657 40 / 958 56
+* notice: next accum: outdated-all outdated-unq / all unq: 673 41 / 967 56
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-10T16:08:56Z:
 * notice: last 14d: all unq: 301 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 657 40 / 953 56
